# ESP32-Leaf

./: CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig  sdkconfig.debug  sdkconfig.default  translateWeights2ESP_lib.py
main/: CMakeLists.txt  cameraSettings.c  component.mk  esp-Leaf.c  onetCut8Weights.h  pnetWeights.h  rnetCut16Weights.h
