# The following lines of boilerplate have to be in your project's
# CMakeLists in this exact order for cmake to work correctly
cmake_minimum_required(VERSION 3.5)

include($ENV{IDF_PATH}/tools/cmake/project.cmake)
#include($CMAKE_CURRENT_SOURCE_DIR/components)

project(esp-leaf)

#set(COMPONENT_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/components/hwd/)

#add_subdirectory(components)

